--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "grace-train-lib",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -41,5 +41,6 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"license": "MIT"
 }
