✨ Add topper support, export body/decal names

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
 	"editor.renderWhitespace": "trailing",
 	"[svelte]": {
 		"editor.defaultFormatter": "svelte.svelte-vscode"
-	}
+	},
+	"editor.defaultColorDecorators": true
 }
