--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
+		"package:watch": "svelte-kit sync && svelte-package -w && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -15,7 +16,18 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
+			"svelte": "./dist/index.js",
+			"default": "./dist/index.js"
+		},
+		"./components": {
+			"types": "./dist/components/index.d.ts",
+			"svelte": "./dist/components/index.js",
+			"default": "./dist/components/index.js"
+		},
+		"./trains": {
+			"types": "./dist/trains/index.d.ts",
+			"svelte": "./dist/trains/index.js",
+			"default": "./dist/trains/index.js"
 		}
 	},
 	"files": [
@@ -24,20 +36,20 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^4.1.2"
+		"svelte": "^4.2.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.22.6",
-		"@sveltejs/package": "^2.2.1",
+		"@sveltejs/kit": "^1.24.1",
+		"@sveltejs/package": "^2.2.2",
 		"color2k": "^2.0.2",
-		"prettier": "^3.0.2",
+		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
-		"publint": "^0.2.0",
+		"publint": "^0.2.2",
 		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.0",
-		"tslib": "^2.6.1",
-		"typescript": "^5.1.6",
+		"svelte-check": "^3.5.1",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
 		"vite": "^4.4.9"
 	},
 	"types": "./dist/index.d.ts",
