--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "grace-train-lib",
 	"version": "0.0.49",
+	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && publint",
+		"package": "svelte-kit sync && svelte-package && npx prisma generate && publint",
 		"package:watch": "svelte-kit sync && svelte-package -w && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -28,6 +29,10 @@
 			"types": "./dist/trains/index.d.ts",
 			"svelte": "./dist/trains/index.js",
 			"default": "./dist/trains/index.js"
+		},
+		"./prisma": {
+			"types": "./dist/prisma/index.d.ts",
+			"default": "./dist/prisma/index.js"
 		}
 	},
 	"files": [
@@ -46,6 +51,7 @@
 		"color2k": "^2.0.3",
 		"prettier": "^3.2.2",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prisma": "^5.8.1",
 		"publint": "^0.2.7",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.3",
@@ -61,5 +67,8 @@
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/vegeta897/grace-train-lib.git"
+	},
+	"dependencies": {
+		"@prisma/client": "^5.8.1"
 	}
 }
