🏗️ Add to and separate data exports from components

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
 			"svelte": "./dist/components/index.js",
 			"default": "./dist/components/index.js"
 		},
-		"./trains": {
-			"types": "./dist/trains/index.d.ts",
-			"svelte": "./dist/trains/index.js",
-			"default": "./dist/trains/index.js"
+		"./data": {
+			"types": "./dist/data/index.d.ts",
+			"svelte": "./dist/data/index.js",
+			"default": "./dist/data/index.js"
 		},
 		"./prisma": {
 			"types": "./dist/prisma/index.d.ts",
