--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"seedDev": "npx tsx ./prisma/seedDev.ts"
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"exports": {
 		".": {
@@ -30,23 +29,17 @@
 			"types": "./dist/data/index.d.ts",
 			"svelte": "./dist/data/index.js",
 			"default": "./dist/data/index.js"
-		},
-		"./prisma": {
-			"types": "./prisma-client/index.d.ts",
-			"default": "./prisma-client/index.js"
 		}
 	},
 	"files": [
 		"dist",
 		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*",
-		"prisma-client"
+		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
 		"svelte": "^4.2.8"
 	},
 	"devDependencies": {
-		"@prisma/client": "^5.8.1",
 		"@sveltejs/adapter-auto": "^3.1.0",
 		"@sveltejs/kit": "^2.3.2",
 		"@sveltejs/package": "^2.2.5",
@@ -54,7 +47,6 @@
 		"color2k": "^2.0.3",
 		"prettier": "^3.2.2",
 		"prettier-plugin-svelte": "^3.1.2",
-		"prisma": "^5.8.1",
 		"publint": "^0.2.7",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.3",
@@ -70,6 +62,5 @@
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/vegeta897/grace-train-lib.git"
-	},
-	"dependencies": {}
+	}
 }
